--- a/src/css/tutorial.css
+++ b/src/css/tutorial.css
@@ -54,6 +54,6 @@
 
     .tutorial-container-visible{
         left: 25vw;
-        top: 2vw;
+        top: 5vw;
     }
 }
